[package]
name = "bh" # bo helper
version = "0.1.11"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
md5 = "0.7.0"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
